Added bin/picasagallery to the dzil for good build and install.

--- a/dist.ini
+++ b/dist.ini
@@ -7,11 +7,12 @@ copyright_holder = Timothy D. Witham
 [GatherDir]
 [MetaYAML]
 [MakeMaker]
-[Manifest]
 [PruneCruft]
 [License]
 [Readme]
+[ExecDir]
 [ExtraTests]
 [PodCoverageTests]
 [PodSyntaxTests]
 [AutoPrereqs]
+[Manifest]
