rename this dev branch to LPDB and disconnect from DB.

--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,12 @@
-name    = picasagallery
-version = 0.1
+name    = LPDB
+version = 0.2
 author  = Timothy D. Witham <twitham@sgcglobal.net>
 license = Perl_5
 copyright_holder = Timothy D. Witham
 
 [GatherDir]
+exclude_match = picasagallery.*
+prune_directory = picasagallery.*
 [MetaYAML]
 [MakeMaker]
 [PruneCruft]
