--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,8 @@ license = Perl_5
 copyright_holder = Timothy D. Witham
 
 [GatherDir]
+exclude_match = .*~$
+exclude_match = LPDB.*
 [MetaYAML]
 [MakeMaker]
 [PruneCruft]
@@ -12,7 +14,5 @@ copyright_holder = Timothy D. Witham
 [Readme]
 [ExecDir]
 [ExtraTests]
-[PodCoverageTests]
-[PodSyntaxTests]
 [AutoPrereqs]
 [Manifest]
