--- a/dist.ini
+++ b/dist.ini
@@ -5,8 +5,7 @@ license = Perl_5
 copyright_holder = Timothy D. Witham
 
 [GatherDir]
-exclude_match = picasagallery.*
-prune_directory = picasagallery.*
+exclude_match = (.*~|picasagallery-.*|tmp.db)$
 [MetaYAML]
 [MakeMaker]
 [PruneCruft]
