Extract thumbnails to a separate database file

--- a/dbicdump.conf
+++ b/dbicdump.conf
@@ -1,11 +1,11 @@
 schema_class LPDB::Schema
 
 <connect_info>
-	dsn dbi:SQLite:./tmp.db
+	dsn dbi:SQLite:./.lpdb.db
 </connect_info>
 
 <loader_options>
 	dump_directory ./lib
 	preserve_case 1
-	use_moose 1
+#	use_moose 1
 </loader_options>
