--- a/dbicdump.conf
+++ b/dbicdump.conf
@@ -1,7 +1,7 @@
 schema_class LPDB::Schema
 
 <connect_info>
-	dsn dbi:SQLite:./.lpdb.db
+	dsn dbi:SQLite:./tmp.db
 </connect_info>
 
 <loader_options>
