--- a/dbicdump.conf
+++ b/dbicdump.conf
@@ -6,6 +6,7 @@ schema_class LPDB::Schema
 
 <loader_options>
 	dump_directory ./lib
+	skip_load_external 1
 	preserve_case 1
 	use_moose 0
 </loader_options>
