--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,8 @@ copyright_holder = Timothy D. Witham
 [GatherDir]
 exclude_match = .*~$
 exclude_match = LPDB.*
+exclude_match = Prima
+exclude_match = .*.jpg
 [MetaYAML]
 [MakeMaker]
 [PruneCruft]
